--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -5,8 +5,13 @@
   justify-content: space-between;
 }
 
+@media screen and (max-width: 984px) {
+.footer {
+  margin:0 24px;
+}
+}
 
-@media screen and (max-width: 631px) {
+@media screen and (max-width: 636px) {
 .footer {
   flex-direction: column;
   margin:0;
