--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,6 +2,8 @@
   display: flex;
   padding: 28px 48px 0 48px;
   justify-content: space-between;
+  max-width: 1280px;
+  margin:0 auto;
 }
 
 @media screen and (max-width: 896px) {
