--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,22 +1,27 @@
 .place__image {
-  width: 100%;
   margin-right: 48px;
   max-width: 460px;
-  max-height: 460px;
+
 }
 
 @media screen and (max-width: 1152px) {
 .place__image {
-  width: 440px;
-  height: 440px;
+  max-width: 440px;
   margin-right:32px;
+}
+}
+
+@media screen and (max-width: 984px) {
+.place__image {
+  max-width: 340px;
+  max-height: 340px;
+  margin-right: 28px;
 }
 }
 
 @media screen and (max-width: 660px) {
 .place__image {
-  width: 320px;
-  height: 320px;
+  max-width: 320px;
   margin:0 auto 32px;
 }
 }
