--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -21,6 +21,16 @@
 }
 }
 
+@media screen and (max-width: 984px) {
+.place__title {
+  margin-right:32px;
+  min-width: 340px;
+  max-width: 340px;
+  font-size: 42px;
+  line-height: 46px;
+
+}
+
 
 @media screen and (max-width: 660px) {
 .place__title {
@@ -28,8 +38,7 @@
   line-height: 35px;
   max-width: 288px;
   min-width:288px;
-  min-height: 35px;
-  margin: 0 auto 32px ;
+  margin: 0 auto 32px;
 }
 }
 
