--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -7,6 +7,7 @@
   text-decoration: none;
   background-image: url(../../../images/__background.png);
   background-repeat: no-repeat;
+  background-position: center;
   margin:0 auto;
   position: relative;
   background-size: cover;
