--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -21,6 +21,8 @@
 @media screen and (max-width: 636px) {
 .footer__link {
   margin: 0 0 32px 16px;
+  font-size: 24px;
+  line-height: 24px;
 }
 
 .footer__link:last-child {
