--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -3,23 +3,24 @@
   color:#FFFFFF;
   font-size: 24px;
   line-height: 28px;
-  text-decoration:underline;
+  text-decoration:none;
   max-width:30px;
-  max-height:28px;
   font-family: "Inter", "Arial", sans-serif;
   font-weight: 400;
+  transition: .3s;
+}
+
+.header__link:hover {
+  opacity: 0.8
 }
 
 .header__link:last-child {
   margin-left:18px;
-  text-decoration: none;
 }
-
 
 @media screen and (max-width: 596px) {
 .header__link {
   max-width: 22px;
-  max-height: 20px;
   font-size: 18px;
   line-height: 20px;
 }
