--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -6,7 +6,7 @@
   color: white;
   max-width: 510px;
   text-align: center;
-  font-family: Inter;
+  font-family:'Inter', 'Arial', sans-serif;
   font-style: normal;
   z-index: 1;
 }
