--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -5,7 +5,7 @@
   line-height: 28px;
   text-decoration:none;
   max-width:30px;
-  font-family: "Inter", "Arial", sans-serif;
+  font-family:'Inter', 'Arial', sans-serif;
   font-weight: 400;
   transition: .3s;
 }
