--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -5,7 +5,7 @@
   font-size: 96px;
   line-height: 100px;
   color:#FFFFFF;
-  font-family: Inter;
+  font-family:'Inter', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 900;
 }
