--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -4,6 +4,11 @@
   margin:0 48px;
   justify-content: space-between;
 }
+@media  screen and (min-width: 1280px) {
+.footer {
+  margin:0 auto;
+}
+}
 
 @media screen and (max-width: 984px) {
 .footer {
