--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -12,6 +12,9 @@
   margin:0;
 }
 
+.place__paragraph:last-child {
+  margin-bottom: 0;
+}
 @media screen and (max-width: 984px) {
 .place__paragraph {
   font-size: 16px;
