--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -8,6 +8,15 @@
   margin-bottom: 92px;
 }
 
+@media screen and (max-width:920px) {
+.place{
+  margin-bottom: 72px;
+}
+.place:last-child {
+  margin-bottom: 90px;
+}
+}
+
 @media screen and (max-width: 760px) {
 .place {
   max-width: 320px;
